logs/django-fieldmaker.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_fieldmaker-0.0.4.egg-info'...
Listing './lib/python3.5/site-packages/fieldmaker'...
Listing './lib/python3.5/site-packages/fieldmaker/admin'...
Listing './lib/python3.5/site-packages/fieldmaker/contrib'...
Listing './lib/python3.5/site-packages/fieldmaker/contrib/oembed'...
Listing './lib/python3.5/site-packages/fieldmaker/contrib/recaptcha'...
Compiling './lib/python3.5/site-packages/fieldmaker/contrib/recaptcha/recaptcha.py'...
***   File "./lib/python3.5/site-packages/fieldmaker/contrib/recaptcha/recaptcha.py", line 89
    except RecaptchaError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fieldmaker/fixtures'...
Compiling './lib/python3.5/site-packages/fieldmaker/form_specifications.py'...
***   File "./lib/python3.5/site-packages/fieldmaker/form_specifications.py", line 34
    print self, self.field_registry.fields
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fieldmaker/static'...
Listing './lib/python3.5/site-packages/fieldmaker/static/fieldmaker'...
Listing './lib/python3.5/site-packages/fieldmaker/static/fieldmaker/js'...
Listing './lib/python3.5/site-packages/fieldmaker/templates'...
Listing './lib/python3.5/site-packages/fieldmaker/templates/admin'...
Listing './lib/python3.5/site-packages/fieldmaker/templates/admin/fieldmaker'...
Listing './lib/python3.5/site-packages/fieldmaker/templates/admin/fieldmaker/formdefinition'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
